--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bernhard's Chatbot</title>
+    <title>AI Chatbot</title>
+    <meta name="description" content="Chat with multiple AI models including OpenAI, Anthropic, and Google AI" />
   </head>
   <body>
     <div id="root"></div>
